Adds resources for TechLAB4Kids projects: - Coding K6 - Ruby - Cosima
1.3.2-TL4K002

--- a/src/app/localizations/en.json
+++ b/src/app/localizations/en.json
@@ -2,6 +2,7 @@
     "MY_PROJECTS": "My Projects",
     "QUICK_INTRO": "Quick Intro to ScratchJr",
     "SAMPLE_PROJECTS": "Sample Projects",
+    "SAMPLE_CodingInfanzia": "Conding con gli animali",
     "ABOUT_SCRATCHJR": "About ScratchJr",
     "INTERFACE_GUIDE": "Interface Guide",
     "PAINT_EDITOR_GUIDE": "Paint Editor Guide",
@@ -179,6 +180,7 @@
     "SAMPLE_TEXT_key_bump_green_duck": "Green Duck",
     "SAMPLE_TEXT_key_quickintro_fish": "Fish",
     "SAMPLE_TEXT_key_quickintro_toc": "Toc",
+    "CHARACTER_Granchino.svg": "Granchino",
     "CHARACTER_Cat.svg": "Cat",
     "CHARACTER_Cat2.svg": "Cat Walking",
     "CHARACTER_Blue.svg": "Tic",
@@ -300,6 +302,7 @@
     "CHARACTER_SailBoat.svg": "Boat",
     "CHARACTER_Boat2.svg": "Boat",
     "CHARACTER_Rocket.svg": "Rocket",
+    "BACKGROUND_TabelloneAnimali.svg": "Coding with animals",
     "BACKGROUND_Farm.svg": "Farm",
     "BACKGROUND_Park.svg": "Park",
     "BACKGROUND_Suburbs.svg": "Suburbs",
