--- a/src/app/localizations/es.json
+++ b/src/app/localizations/es.json
@@ -2,6 +2,7 @@
     "MY_PROJECTS": "Mis proyectos",
     "QUICK_INTRO": "Introducción rápida a ScratchJr",
     "SAMPLE_PROJECTS": "Ejemplos de proyectos",
+    "SAMPLE_CodingInfanzia": "Conding con gli animali",
     "ABOUT_SCRATCHJR": "Acerca de ScratchJr",
     "INTERFACE_GUIDE": "Guía de la interfaz",
     "PAINT_EDITOR_GUIDE": "Guía del editor de pintura",
@@ -179,6 +180,7 @@
     "SAMPLE_TEXT_key_bump_green_duck": "Pato Verde",
     "SAMPLE_TEXT_key_quickintro_fish": "Pez",
     "SAMPLE_TEXT_key_quickintro_toc": "Toc",
+    "CHARACTER_Granchino.svg": "Granchino",
     "CHARACTER_Cat.svg": "Gato",
     "CHARACTER_Cat2.svg": "Gato andando",
     "CHARACTER_Blue.svg": "Ta",
@@ -300,6 +302,7 @@
     "CHARACTER_SailBoat.svg": "Barco",
     "CHARACTER_Boat2.svg": "Barco",
     "CHARACTER_Rocket.svg": "Cohete",
+    "BACKGROUND_TabelloneAnimali.svg": "Coding con animales",
     "BACKGROUND_Farm.svg": "Granja",
     "BACKGROUND_Park.svg": "Parque",
     "BACKGROUND_Suburbs.svg": "Barrio residencial",
