--- a/src/app/localizations/it.json
+++ b/src/app/localizations/it.json
@@ -2,6 +2,8 @@
     "MY_PROJECTS": "I Miei Progetti",
     "QUICK_INTRO": "Breve Introduzione a ScratchJr",
     "SAMPLE_PROJECTS": "Progetti di Esempio",
+    "SAMPLE_CodingInfanzia": "Conding con gli animali",
+    "SAMPLE_CodingCosima": "Conding con cosima",
     "ABOUT_SCRATCHJR": "Info su ScratchJr",
     "INTERFACE_GUIDE": "Guida all'Interfaccia",
     "PAINT_EDITOR_GUIDE": "Guida dell'Editor di Immagini",
@@ -179,6 +181,41 @@
     "SAMPLE_TEXT_key_bump_green_duck": "Paperella Verde",
     "SAMPLE_TEXT_key_quickintro_fish": "Pesce",
     "SAMPLE_TEXT_key_quickintro_toc": "Tac",
+
+    "CHARACTER_Techy.svg": "Techy",
+    "CHARACTER_coding_Techy.svg": "Techy (Coding)",
+
+    "CHARACTER_coding_Granchino.svg": "Granchino (Coding)",
+    "CHARACTER_coding_elephant.svg": "Elefante (Coding)",
+    "CHARACTER_coding_flamingo.svg": "Fenicottero (Coding)",
+    "CHARACTER_coding_giraffe.svg": "Giraffa (Coding)",
+    "CHARACTER_coding_house.svg": "Casa (Coding)",
+    "CHARACTER_coding_kangaroo.svg": "Canguro (Coding)",
+    "CHARACTER_coding_koala.svg": "Koala (Coding)",
+    "CHARACTER_coding_lion.svg": "Leone (Coding)",
+
+    "CHARACTER_Cosima_Ragazza.svg": "Cosima ragazza (Cosima)",
+    "CHARACTER_Cosima_Ragazza_Riposa.svg": "Cosima ragazza riposa (Cosima)",
+    "CHARACTER_Cosima_Grande.svg": "Cosima adulta (Cosima)",
+    "CHARACTER_Cosima_Nonna.svg": "La nonna (Cosima)",
+    "CHARACTER_Cosima_Jana.svg": "Jana (Cosima)",
+    "CHARACTER_Cosima_Andrea.svg": "Andrea (Cosima)",
+    "CHARACTER_Cosima_Santus.svg": "Santus (Cosima)",
+    "CHARACTER_Cosima_Beppa.svg": "Beppa (Cosima)",
+    "CHARACTER_Cosima_Muflone.svg": "Muflone (Cosima)",
+
+    "CHARACTER_Ruby_01.svg": "Ruby (Ruby)",
+    "CHARACTER_Ruby_02.svg": "Ruby (Ruby)",
+    "CHARACTER_Ruby_03.svg": "Ruby (Ruby)",
+    "CHARACTER_Ruby_Django.svg": "Django (Ruby)",
+    "CHARACTER_Ruby_Leopardina.svg": "La leopardina (Ruby)",
+    "CHARACTER_Ruby_Pinguino_01.svg": "Un pinguino (Ruby)",
+    "CHARACTER_Ruby_Pinguino_02.svg": "Un pinguino (Ruby)",
+    "CHARACTER_Ruby_Pinguino_03.svg": "Un pinguino (Ruby)",
+    "CHARACTER_Ruby_Pinguino_04.svg": "Un pinguino (Ruby)",
+    "CHARACTER_Ruby_Robot.svg": "Un robot (Ruby)",
+    "CHARACTER_Ruby_Volpe.svg": "Una volpe (Ruby)",
+
     "CHARACTER_Cat.svg": "Gatto",
     "CHARACTER_Cat2.svg": "Gatto che Cammina",
     "CHARACTER_Blue.svg": "Tic",
@@ -300,6 +337,13 @@
     "CHARACTER_SailBoat.svg": "Nave",
     "CHARACTER_Boat2.svg": "Nave",
     "CHARACTER_Rocket.svg": "Razzo",
+    "BACKGROUND_TabelloneAnimali.svg": "Coding con gli animali",
+    "BACKGROUND_TabelloneAnimaliVuoto.svg": "Coding con gli animali",
+    "BACKGROUND_Cosima_Cucina.svg": "La cucina di Cosima",
+    "BACKGROUND_Cosima_Natura.svg": "La natura di Cosima",
+    "BACKGROUND_Ruby_casa_leopardina_small.svg": "La casa della Leopardina",
+    "BACKGROUND_Ruby_cucina.svg": "La cucina dei Robot",
+    "BACKGROUND_Ruby_orto_small.svg": "L'orto delle volpi",
     "BACKGROUND_Farm.svg": "Fattoria",
     "BACKGROUND_Park.svg": "Parco",
     "BACKGROUND_Suburbs.svg": "Periferia",
