Updates recicle images 1.3.2-TL4K004

--- a/src/app/localizations/it.json
+++ b/src/app/localizations/it.json
@@ -218,6 +218,20 @@
     "CHARACTER_Ruby_Volpe.svg": "Una volpe (Ruby)",
 
     "CHARACTER_fuoco_01.svg": "Fuoco",
+    
+    "CHARACTER_riciclo_barattolo.svg": "Barattolo",
+    "CHARACTER_riciclo_bottiglia.svg": "Bottiglia di plastica",
+    "CHARACTER_riciclo_bottiglie.svg": "Bottiglie di vetro",
+    "CHARACTER_riciclo_carta.svg": "Carta",
+    "CHARACTER_riciclo_cestino_carta.svg":"Cestino per la carta",
+    "CHARACTER_riciclo_cellulare.svg": "Cellulare",
+    "CHARACTER_riciclo_cestino_elettronica.svg": "Rifiuti elettronici",
+    "CHARACTER_riciclo_cestino_metalli.svg": "Cestino per i metalli",
+    "CHARACTER_riciclo_cestino_organico.svg": "Cestino per l'organico (umido)",
+    "CHARACTER_riciclo_cestino_plastica.svg": "Cestino per la plastica",
+    "CHARACTER_riciclo_cestino_vetro.svg": "Cestino per il vetro",
+    "CHARACTER_riciclo_indifferenziato.svg": "Rifiuti non differenziabili",
+    "CHARACTER_riciclo_mela.svg": "Mela",
 
     "CHARACTER_Cat.svg": "Gatto",
     "CHARACTER_Cat2.svg": "Gatto che Cammina",
