Adds resources for TechLAB4Kids projects: - Coding K6 - Ruby
1.3.2-TL4K009

--- a/src/app/localizations/it.json
+++ b/src/app/localizations/it.json
@@ -207,6 +207,7 @@
     "CHARACTER_Cosima_Beppa.svg": "Beppa (Cosima)",
     "CHARACTER_Cosima_Muflone.svg": "Muflone (Cosima)",
 
+    "CHARACTER_Ruby.svg": "Ruby (Ruby)",
     "CHARACTER_Ruby_01.svg": "Ruby (Ruby)",
     "CHARACTER_Ruby_02.svg": "Ruby (Ruby)",
     "CHARACTER_Ruby_03.svg": "Ruby (Ruby)",
