new resources for Ruby projects

--- a/src/app/localizations/it.json
+++ b/src/app/localizations/it.json
@@ -366,6 +366,7 @@
     "BACKGROUND_TabelloneVuoto.svg": "Coding con gli animali vuoto",
     "BACKGROUND_Cosima_Cucina.svg": "La cucina di Cosima",
     "BACKGROUND_Cosima_Natura.svg": "La natura di Cosima",
+    "BACKGROUND_Ruby_Tabellone.svg": "Coding con Ruby",
     "BACKGROUND_Ruby_casa_leopardina_small.svg": "La casa della Leopardina",
     "BACKGROUND_Ruby_cucina.svg": "La cucina dei Robot",
     "BACKGROUND_Ruby_orto_small.svg": "L'orto delle volpi",
